# brain-project

./: .gitignore  README.md  abstract.md  pyproject.toml  slides.md
.clawhub/: lock.json
docs/: 100x-autoresearch.md  10x-plan.md  AUDIT.md  MEMORY_THEORY.md  SOTA_MEMORY.md  autoresearch-assessment.md  claim-lattice-strict-design.md  claim-lattice-strict-plan.md  indexing-delay.md  ontologist-adaptive-vocabulary-spec.md  ontology-improvement-plan.md  playbooks.md  project_requirements.md  realtime-named-sessions-design.md  realtime-named-sessions-plan.md
docs/incidents/: 2026-04-23-son-dang-o-saigon.md
scripts/: auto-extract.sh  cleanup_system_file_pollution.py  onboard.sh
src/brain/: _audit_ledger.py  _projection.py  apply_extraction.py  audit.py  auto_clean.py  auto_extract.py  autoresearch.py  backfill_facts.py  benchmark.py  check_pending.sh  clean.py  cli.py  config.py  consolidation.py  db.py  dedupe.py  dedupe_judge.py  dedupe_ledger.py  entities.py  failures.py  freshness.py  git_ops.py  graph.py  harvest_session.py  index.py  ingest.py  ingest_notes.py  init.py  install_hooks.py  io.py  live_sessions.py  llm_dedup.py  log.py  mcp_server.py  mcp_server_read.py  mcp_server_write.py  note_extract.py  ontology_guard.py  predicate_registry.py  prefilter.py  (+22 more)
templates/claude/: CLAUDE.md.tmpl  settings.json.tmpl
templates/cursor/: USER_RULES.md.tmpl  hooks.json.tmpl
templates/identity/: corrections.md.tmpl  preferences.md.tmpl  who-i-am.md.tmpl
templates/launchd/: brain-auto-extract.plist.tmpl  brain-autoresearch.plist.tmpl  brain-consolidate.plist.tmpl  brain-semantic-worker.plist.tmpl
templates/playbooks/: _template.md.tmpl
templates/scripts/: auto-extract.sh.tmpl  autoresearch-tick.sh.tmpl
templates/systemd/: brain-auto-extract.service.tmpl  brain-auto-extract.timer.tmpl  brain-consolidate.service.tmpl  brain-consolidate.timer.tmpl  brain-semantic-worker.service.tmpl  brain-watcher.service.tmpl
tests/: conftest.py  test_atomic_write.py  test_audit.py  test_audit_ledger.py  test_auto_clean_anchors.py  test_auto_extract.py  test_benchmark.py  test_claims_domain.py  test_claims_isolation.py  test_claims_progress.py  test_claims_read.py  test_claims_strict_recall.py  test_config_seeds.py  test_consolidate_aliases.py  test_consolidation.py  test_consolidation_scheduler.py  test_db_search.py  test_entities.py  test_extract_template.py  test_fact_claims.py  test_failures.py  test_forget.py  test_freshness.py  test_git_ops.py  test_golden_bench.py  test_graph.py  test_harvest.py  test_harvest_cursor.py  test_ingest.py  test_ingest_notes.py  test_init.py  test_install_hooks.py  test_integration.py  test_mcp_server.py  test_mcp_server_split.py  test_note_extract.py  test_ontology_guard.py  test_predicate_registry.py  test_promote.py  test_query_rewriter.py  (+33 more)
tests/golden/: recall.yaml  (+1 more)
(+41 files in other folders)
