[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "brain"
version = "0.1.0"
description = "Persistent memory system for Claude Code / Cursor — autonomous extraction, hybrid (BM25+semantic) recall, exposed as MCP tools."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "brain contributors" }]

# Pinned to versions verified working in production. Bump deliberately.
dependencies = [
    "mcp>=1.10,<2.0",
    "sentence-transformers>=3.0,<5.0",
    "numpy>=1.26,<3.0",
    "PyYAML>=6.0,<7.0",
    "psutil>=5.9,<8.0",
    "pyoxigraph>=0.4,<1.0",
]

[project.optional-dependencies]
# Direct Anthropic SDK is faster than shelling out to `claude --print`, but
# the system works either way — the SDK is auto-detected at runtime.
sdk = [
    "anthropic>=0.40,<2.0",
]
# Interactive `brain init` wizard. Optional so headless installs can skip it.
init = [
    "questionary>=2.0,<3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "questionary>=2.0,<3.0",
]

[project.scripts]
brain = "brain.cli:main"
brain-mcp = "brain.mcp_server:main"
brain-mcp-read = "brain.mcp_server_read:main"
brain-mcp-write = "brain.mcp_server_write:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
brain = ["prompts/*.md", "presets/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m 'not integration'"
markers = [
    "bench: golden-set retrieval benchmark (slow; needs a populated ~/.brain vault)",
    "integration: long-running end-to-end tests; not run by default",
]
